public/resources/loadingTransition.css
.span-12 {
    grid-column: span 12;
}

.span-6 {
    grid-column: span 6;
}

@media only screen and (max-width: 1220px) {
    .span-6 {
        grid-column: span 12;
    }
}

.fadeToNone {
    animation: fadeToNone;
    animation-duration: 4s;
    animation-fill-mode: forwards;
}

@keyframes fadeToNone {
    from { opacity: 1; }
    to { opacity: 0; }
}

.fadeSkipButton {
    animation: fadeSkipButton;
    animation-duration: 4s;
    animation-fill-mode: forwards;
}

@keyframes fadeSkipButton {
    from { opacity: .3; }
    to { opacity: 0; }
}

/* Fade in homepage elements */
.stars, .twinkling, .footer, .page-header {
    animation: fadeInSky;
    animation-duration: 2s;
}

.stars, .twinkling {
    position:absolute;
    top:0;
    left:0;
    right:0;
    bottom:0;
    width:100%;
    height:100%;
    display:block;
}

.stars {
    background:#000 url("stars.png") repeat top center;
    z-index: 0;
}

.twinkling{
    background:transparent url("twinkling.png") repeat top center;
    z-index: 1;
    animation:move-twink-back 200s linear infinite;
}

footer {
    background: white;
    width: 100%;
    height: fit-content;
    position: relative;
    bottom: 0;
    z-index: 3;
    text-align:center;

    min-width: 365px;
} 

.page-header {
    background: white;
    width: 100%;
    height: fit-content;
    position: relative;
    top: 0;
    z-index: 3;

    min-width: 365px;
}

.page-header a, footer a {
    text-decoration: none;
    padding-left: 3vh;
    padding-right: 3vh;
}

.page-header img, footer img {
    vertical-align: middle;
    display: inline;
    width: 5vh;
    height: 5vh;
}

#IY-Logo {
    padding-left: 10px;
    vertical-align: middle;
    display: inline;
    font-family: "Ink Free";
    text-decoration: none;
    color: black;
}

.logo-container {
    width:fit-content;
    height: fit-content;
}

.logo-container:hover {
    border-radius: 10px;
    animation: logo-container-change;
    animation-duration: 1s;
    animation-fill-mode: forwards;
    animation-direction: alternate;
}

@keyframes logo-container-change {
    from {}
    to { box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.8); }
}

#Gmail-Logo:hover {
    filter: invert(12%) sepia(86%) saturate(6865%) hue-rotate(3deg) brightness(105%) contrast(118%);
}

#Github-Logo:hover {
    filter: invert(70%) sepia(63%) saturate(6243%) hue-rotate(86deg) brightness(128%) contrast(112%);
}

#LinkedIn-Logo:hover {
    filter: invert(34%) sepia(92%) saturate(459%) hue-rotate(172deg) brightness(91%) contrast(97%);
}

@keyframes move-twink-back {
    from {background-position:0 0;}
    to {background-position:-10000px 5000px;}
}

@keyframes move-clouds-back {
    from {background-position:0 0;}
    to {background-position:10000px 0;}
}

@keyframes fadeInSky {
    from { opacity: 0; }
    to { opacity: 1; }
}

.grid-container {
    width: 100%;
    position: relative;
    z-index: 2;
}

.grid {
    position:relative;
    padding: 24px;
    margin: auto;

    display: grid;
    grid-row-gap: 24px;
    grid-column-gap: 24px;

    grid-template-columns: repeat(12, minmax(0, 1fr));
    
    width: fit-content;
    justify-content: center;
}

div section {
    width: 100%;
    margin: auto;
    
    min-width: 350px;
}

.about-me-card, .skills-interests-card, .projects-card, .education-card, .achievements-awards-card {
    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.1);
    transition: 0.3s;
}

.about-me-card:hover, .skills-interests-card:hover, .projects-card:hover, .education-card:hover, .achievements-awards-card:hover {
    box-shadow: 0 0 10px 0 rgba(255, 255, 255, .6);
}

.about-me-card {
    border-radius: 10px;

    background: rgb(171, 221, 255);
    background: linear-gradient(31deg, rgb(171, 221, 255) 0%, rgb(115, 116, 115) 100%);
}

.about-me-card p header {
    padding-top: 10px;
    color: rgb(171 221 255);
    font-size: 75.4px;
    font-weight: 700;
    font-family: sans-serif;
}

.about-me-card p div {
    padding-bottom: 10px;
    font-size: 30.16px;
    font-weight: 400;
    font-family: Helvetica, sans-serif;
}

.about-me-card div img {
    display: block;
    position: relative;

    width: 40%;

    margin-left: auto;
    margin-right: auto;
}

.about-me-card > p {
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px; 
    background: rgba(0, 0, 0, 50%);
    text-align: center;

    width: 100%;
}

.projects-card {
    border-radius: 10px;

    background: rgb(255,46,0);
    background: linear-gradient(31deg, rgba(255,46,0,1) 0%, rgba(80,0,0,1) 100%);

    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
    transition: 0.3s;

    padding-left: 20px;
    padding-right: 20px;
}

.projects-card p header {
    padding-top: 30px;
    font-size: 45.24px;
    font-weight: 700;
    font-family: sans-serif;
}

.projects-card p div {
    padding-bottom: 30px;
    padding-left: 20px;
    font-size: 30.16px;
    font-weight: 400;
    font-family: Helvetica, sans-serif;
}

.skills-interests-card {
    border-radius: 10px;
    background: rgb(252, 254, 255);
    background: linear-gradient(31deg, rgb(0, 255, 21) 0%, rgb(255, 217, 0) 100%);

    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
    transition: 0.3s;

    padding-left: 20px;
    padding-right: 20px;
}

.skills-interests-card p header {
    padding-top: 30px;
    font-size: 45.24px;
    font-weight: 700;
    font-family: sans-serif;
}

.skills-interests-card p div {
    padding-bottom: 30px;
    padding-left: 20px;
    font-size: 30.16px;
    font-weight: 400;
    font-family: Helvetica, sans-serif;
}

.bimodular-row {
    display: flex;
}

.bimodular-row > div {
}

.bimodular-card1 {
    width: 50%;
    margin-left: 0;
    margin-right: auto;
}

.bimodular-card2 {
    width: 50%;
    margin-right: 0;
    margin-left: auto;
}

.education-card {
    border-radius: 10px;
    background: rgb(194,35,0);
    background: linear-gradient(31deg, rgba(194,35,0,1) 0%, rgba(85,0,181,1) 100%);

    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
    transition: 0.3s;

    padding-left: 20px;
    padding-right: 20px;
}

.education-card p header {
    padding-top: 30px;
    font-size: 45.24px;
    font-weight: 700;
    font-family: sans-serif;
}

.education-card p div {
    padding-bottom: 30px;
    padding-left: 20px;
    font-size: 30.16px;
    font-weight: 400;
    font-family: Helvetica, sans-serif;
}

.achievements-awards-card {
    border-radius: 10px;
    background: rgb(85,0,181);
    background: linear-gradient(31deg, rgba(85,0,181,1) 0%, rgba(194,35,0,1) 100%);

    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
    transition: 0.3s;

    padding-left: 20px;
    padding-right: 20px;
}

.achievements-awards-card p header {
    padding-top: 30px;
    font-size: 45.24px;
    font-weight: 700;
    font-family: sans-serif;
}

.achievements-awards-card p div {
    padding-bottom: 30px;
    padding-left: 20px;
    font-size: 30.16px;
    font-weight: 400;
    font-family: Helvetica, sans-serif;
}

